--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,5 +14,4 @@ install:
   - chmod +x gradlew # добавление прав на запуск файла gradlew
 
 build_script:
-    - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
-    - dselenide.headless=true
+    - ./gradlew test --info -Dselenide.headless=true  # запускаем тест, флаг --info позволяет выводить больше информации
